--- a/LeckerBag/WebContent/css/style.css
+++ b/LeckerBag/WebContent/css/style.css
@@ -404,6 +404,14 @@ body
     {
         width: 110px;
     }
+    #footer
+	{
+    height: 600px;
+	}
+	#footer h4, #footer p
+	{
+    text-align: center;
+	}
 }
 
 /* Small devices (bis 767px) */
