--- a/LeckerBag/WebContent/css/style.css
+++ b/LeckerBag/WebContent/css/style.css
@@ -1221,19 +1221,34 @@ label
 	margin-right: 15px;
 }
 .fav_list_holder{
-	text-align:center;
+	text-align: center;
+}
+.fav_list_active{
+ 	border-color: #868492 !important;
 }
 .fav_list{
 	vertical-align: middle;
 	margin: 0px;
 	line-height: 40px;
 	cursor: pointer;
-	border: 1px solid;
+	border: 3px solid;
 	border-color: #ddd;
 	border-radius: 4px;
 }
+.fav_list li{
+	color: #fff;
+}
+.list_rohling{
+	background: #39594C;
+}
+.list_getraenk{
+	background: #77A33F;
+}
+.list_obst{
+	background: #A5D26D;
+}
 .fav_list:hover{
-	border: 1px solid;
+	border: 3px solid;
 	border-color: #868492;
 	border-radius: 4px;
 }
